--- a/index.html
+++ b/index.html
@@ -1,2 +1,28 @@
-<!-- Code Challenge #2 -->
-<!-- Write your CSS in a style tag. -->
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<style>
+	
+		div.raggy  {background-color: white;
+					margin: 350px;
+					box-shadow: 10px 10px 10px 10px;
+					color: gray;
+					padding: 50px}
+
+		p {line-height: 2.0}
+		
+		div.raggy h1 {color: lightblue;}
+
+		body {background-image: url(ragdolls.jpg);
+
+	
+
+	</style>
+	
+</head>
+<body> 
+	<div class="raggy"> <h1>Ragdolls</h1> <p>The Ragdoll is a cat breed with blue eyes and a distinct colorpoint coat. It is a large and muscular semi-longhair cat with a soft and silky coat. Like all long long haired cats, Ragdolls need grooming to ensure their fur does not mat.</p>
+		
+</body>
+</html>
